--- a/app/src/main/res/layout/activity_check_car.xml
+++ b/app/src/main/res/layout/activity_check_car.xml
@@ -76,6 +76,8 @@
             android:layout_height="50sp"
             android:background="@color/white"
             android:ems="10"
+            android:paddingStart="20sp"
+            android:paddingEnd="20sp"
             android:inputType="textPersonName"
             app:layout_constraintStart_toEndOf="@+id/lblCarBrand"
             app:layout_constraintTop_toTopOf="@id/lblCarBrand" />
@@ -87,8 +89,9 @@
             android:layout_marginTop="16dp"
             android:background="@color/white"
             android:ems="10"
+            android:paddingStart="20sp"
+            android:paddingEnd="20sp"
             android:inputType="textPersonName"
-
             app:layout_constraintStart_toEndOf="@+id/lblCarModel"
             app:layout_constraintTop_toBottomOf="@id/txtCarBrand" />
 
@@ -105,10 +108,11 @@
             android:id="@+id/txtCarPrice"
             android:layout_width="0dp"
             android:layout_height="50sp"
-            android:layout_marginTop="16dp"
             android:background="@color/white"
+            android:gravity="center"
+            android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="@id/txtCarModel"
             app:layout_constraintStart_toEndOf="@+id/lblCarPrice"
-            app:layout_constraintTop_toBottomOf="@id/btnCheckPrice" />
+            app:layout_constraintTop_toTopOf="@id/lblCarPrice" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
